[gd_scene load_steps=10 format=4 uid="uid://dpb0jtdcwp4if"]

[ext_resource type="Script" uid="uid://blblk7rf1wgak" path="res://platformer/platformer_base.gd" id="1_je3qg"]
[ext_resource type="TileSet" uid="uid://c8g3p55hca58k" path="res://assets/level_pallette.tres" id="2_wmrb2"]
[ext_resource type="Texture2D" uid="uid://3o6vlva5jktb" path="res://assets/aap-64-pallette-Sheet.png" id="3_ufqir"]
[ext_resource type="PackedScene" uid="uid://ca8pf7g3abhe8" path="res://platformer/platformer_shroom.tscn" id="4_h5jla"]
[ext_resource type="Script" uid="uid://bosc7a4ro3bnk" path="res://platformer/platformer_hud.gd" id="5_ll8sa"]
[ext_resource type="Theme" uid="uid://du1ir6iptoqui" path="res://assets/fungisland.tres" id="6_f6opx"]

[sub_resource type="TileMapPattern" id="TileMapPattern_i468s"]
tile_data = PackedInt32Array(0, 327680, 5, 1, 196608, 5, 2, 65536, 5, 3, 196608, 5, 4, 196608, 5, 5, 327680, 5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lypxs"]
texture = ExtResource("3_ufqir")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0/physics_layer_0/polygon_0/one_way = true
8:3/0 = 0
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0/physics_layer_0/polygon_0/one_way = true
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/physics_layer_0/polygon_0/one_way = true
2:5/0 = 0
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0/physics_layer_0/polygon_0/one_way = true
4:5/0 = 0
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0/physics_layer_0/polygon_0/one_way = true
6:5/0 = 0
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0/physics_layer_0/polygon_0/one_way = true
8:5/0 = 0
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0/physics_layer_0/polygon_0/one_way = true
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0

[sub_resource type="TileSet" id="TileSet_i4we8"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lypxs")
pattern_0 = SubResource("TileMapPattern_i468s")

[node name="Level 1" type="Node2D"]
script = ExtResource("1_je3qg")

[node name="Parallax2D2" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 360)

[node name="Sky" type="TileMapLayer" parent="Parallax2D2"]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAYAAAAAAAEAAAAEAAYAAAAAAAIAAAAEAAYAAAAAAAMAAAAEAAYAAAAAAAQAAAAEAAYAAAAAAAUAAAAEAAYAAAAAAAYAAAAEAAYAAAAAAAcAAAAEAAYAAAAAAAgAAAAEAAYAAAAAAAkAAAAEAAYAAAAAAAoAAAAEAAYAAAAAAAsAAAAEAAYAAAAAAAwAAAAEAAYAAAAAAA0AAAAEAAYAAAAAAA4AAAAEAAYAAAAAAA8AAAAEAAYAAAAAABAAAAAEAAYAAAAAABEAAAAEAAYAAAABAAAAAAAEAAYAAAABAAEAAAAEAAYAAAABAAIAAAAEAAYAAAABAAMAAAAEAAYAAAABAAQAAAAEAAYAAAABAAUAAAAEAAYAAAABAAYAAAAEAAYAAAABAAcAAAAEAAYAAAABAAgAAAAEAAYAAAABAAkAAAAEAAYAAAABAAoAAAAEAAYAAAABAAsAAAAEAAYAAAABAAwAAAAEAAYAAAABAA0AAAAEAAYAAAABAA4AAAAEAAYAAAABAA8AAAAEAAYAAAABABAAAAAEAAYAAAABABEAAAAEAAYAAAACAAAAAAAEAAYAAAACAAEAAAAEAAYAAAACAAIAAAAEAAYAAAACAAMAAAAEAAYAAAACAAQAAAAEAAYAAAACAAUAAAAEAAYAAAACAAYAAAAEAAYAAAACAAcAAAAEAAYAAAACAAgAAAAEAAYAAAACAAkAAAAEAAYAAAACAAoAAAAEAAYAAAACAAsAAAAEAAYAAAACAAwAAAAEAAYAAAACAA0AAAAEAAYAAAACAA4AAAAEAAYAAAACAA8AAAAEAAYAAAACABAAAAAEAAYAAAACABEAAAAEAAYAAAADAAAAAAAEAAYAAAADAAEAAAAEAAYAAAADAAIAAAAEAAYAAAADAAMAAAAEAAYAAAADAAQAAAAEAAYAAAADAAUAAAAEAAYAAAADAAYAAAAEAAYAAAADAAcAAAAEAAYAAAADAAgAAAAEAAYAAAADAAkAAAAEAAYAAAADAAoAAAAEAAYAAAADAAsAAAAEAAYAAAADAAwAAAAEAAYAAAADAA0AAAAEAAYAAAADAA4AAAAEAAYAAAADAA8AAAAEAAYAAAADABAAAAAEAAYAAAADABEAAAAEAAYAAAAEAAAAAAAEAAYAAAAEAAEAAAAEAAYAAAAEAAIAAAAEAAYAAAAEAAMAAAAEAAYAAAAEAAQAAAAEAAYAAAAEAAUAAAAEAAYAAAAEAAYAAAAEAAYAAAAEAAcAAAAEAAYAAAAEAAgAAAAEAAYAAAAEAAkAAAAEAAYAAAAEAAoAAAAEAAYAAAAEAAsAAAAEAAYAAAAEAAwAAAAEAAYAAAAEAA0AAAAEAAYAAAAEAA4AAAAEAAYAAAAEAA8AAAAEAAYAAAAEABAAAAAEAAYAAAAEABEAAAAEAAYAAAAFAAAAAAAEAAYAAAAFAAEAAAAEAAYAAAAFAAIAAAAEAAYAAAAFAAMAAAAEAAYAAAAFAAQAAAAEAAYAAAAFAAUAAAAEAAYAAAAFAAYAAAAEAAYAAAAFAAcAAAAEAAYAAAAFAAgAAAAEAAYAAAAFAAkAAAAEAAYAAAAFAAoAAAAEAAYAAAAFAAsAAAAEAAYAAAAFAAwAAAAEAAYAAAAFAA0AAAAEAAYAAAAFAA4AAAAEAAYAAAAFAA8AAAAEAAYAAAAFABAAAAAEAAYAAAAFABEAAAAEAAYAAAAGAAAAAAAEAAYAAAAGAAEAAAAEAAYAAAAGAAIAAAAEAAYAAAAGAAMAAAAEAAYAAAAGAAQAAAAEAAYAAAAGAAUAAAAEAAYAAAAGAAYAAAAEAAYAAAAGAAcAAAAEAAYAAAAGAAgAAAAEAAYAAAAGAAkAAAAEAAYAAAAGAAoAAAAEAAYAAAAGAAsAAAAEAAYAAAAGAAwAAAAEAAYAAAAGAA0AAAAEAAYAAAAGAA4AAAAEAAYAAAAGAA8AAAAEAAYAAAAGABAAAAAEAAYAAAAGABEAAAAEAAYAAAAHAAAAAAAEAAYAAAAHAAEAAAAEAAYAAAAHAAIAAAAEAAYAAAAHAAMAAAAEAAYAAAAHAAQAAAAEAAYAAAAHAAUAAAAEAAYAAAAHAAYAAAAEAAYAAAAHAAcAAAAEAAYAAAAHAAgAAAAEAAYAAAAHAAkAAAAEAAYAAAAHAAoAAAAEAAYAAAAHAAsAAAAEAAYAAAAHAAwAAAAEAAYAAAAHAA0AAAAEAAYAAAAHAA4AAAAEAAYAAAAHAA8AAAAEAAYAAAAHABAAAAAEAAYAAAAHABEAAAAEAAYAAAAIAAAAAAAEAAYAAAAIAAEAAAAEAAYAAAAIAAIAAAAEAAYAAAAIAAMAAAAEAAYAAAAIAAQAAAAEAAYAAAAIAAUAAAAEAAYAAAAIAAYAAAAEAAYAAAAIAAcAAAAEAAYAAAAIAAgAAAAEAAYAAAAIAAkAAAAEAAYAAAAIAAoAAAAEAAYAAAAIAAsAAAAEAAYAAAAIAAwAAAAEAAYAAAAIAA0AAAAEAAYAAAAIAA4AAAAEAAYAAAAIAA8AAAAEAAYAAAAIABAAAAAEAAYAAAAIABEAAAAEAAYAAAAJAAAAAAAEAAYAAAAJAAEAAAAEAAYAAAAJAAIAAAAEAAYAAAAJAAMAAAAEAAYAAAAJAAQAAAAEAAYAAAAJAAUAAAAEAAYAAAAJAAYAAAAEAAYAAAAJAAcAAAAEAAYAAAAJAAgAAAAEAAYAAAAJAAkAAAAEAAYAAAAJAAoAAAAEAAYAAAAJAAsAAAAEAAYAAAAJAAwAAAAEAAYAAAAJAA0AAAAEAAYAAAAJAA4AAAAEAAYAAAAJAA8AAAAEAAYAAAAJABAAAAAEAAYAAAAJABEAAAAEAAYAAAAKAAAAAAAEAAYAAAAKAAEAAAAEAAYAAAAKAAIAAAAEAAYAAAAKAAMAAAAEAAYAAAAKAAQAAAAEAAYAAAAKAAUAAAAEAAYAAAAKAAYAAAAEAAYAAAAKAAcAAAAEAAYAAAAKAAgAAAAEAAYAAAAKAAkAAAAEAAYAAAAKAAoAAAAEAAYAAAAKAAsAAAAEAAYAAAAKAAwAAAAEAAYAAAAKAA0AAAAEAAYAAAAKAA4AAAAEAAYAAAAKAA8AAAAEAAYAAAAKABAAAAAEAAYAAAAKABEAAAAEAAYAAAALAAAAAAAEAAYAAAALAAEAAAAEAAYAAAALAAIAAAAEAAYAAAALAAMAAAAEAAYAAAALAAQAAAAEAAYAAAALAAUAAAAEAAYAAAALAAYAAAAEAAYAAAALAAcAAAAEAAYAAAALAAgAAAAEAAYAAAALAAkAAAAEAAYAAAALAAoAAAAEAAYAAAALAAsAAAAEAAYAAAALAAwAAAAEAAYAAAALAA0AAAAEAAYAAAALAA4AAAAEAAYAAAALAA8AAAAEAAYAAAALABAAAAAEAAYAAAALABEAAAAEAAYAAAAMAAAAAAAEAAYAAAAMAAEAAAAEAAYAAAAMAAIAAAAEAAYAAAAMAAMAAAAEAAYAAAAMAAQAAAAEAAYAAAAMAAUAAAAEAAYAAAAMAAYAAAAEAAYAAAAMAAcAAAAEAAYAAAAMAAgAAAAEAAYAAAAMAAkAAAAEAAYAAAAMAAoAAAAEAAYAAAAMAAsAAAAEAAYAAAAMAAwAAAAEAAYAAAAMAA0AAAAEAAYAAAAMAA4AAAAEAAYAAAAMAA8AAAAEAAYAAAAMABAAAAAEAAYAAAAMABEAAAAEAAYAAAANAAAAAAAEAAYAAAANAAEAAAAEAAYAAAANAAIAAAAEAAYAAAANAAMAAAAEAAYAAAANAAQAAAAEAAYAAAANAAUAAAAEAAYAAAANAAYAAAAEAAYAAAANAAcAAAAEAAYAAAANAAgAAAAEAAYAAAANAAkAAAAEAAYAAAANAAoAAAAEAAYAAAANAAsAAAAEAAYAAAANAAwAAAAEAAYAAAANAA0AAAAEAAYAAAANAA4AAAAEAAYAAAANAA8AAAAEAAYAAAANABAAAAAEAAYAAAANABEAAAAEAAYAAAAOAAAAAAAEAAYAAAAOAAEAAAAEAAYAAAAOAAIAAAAEAAYAAAAOAAMAAAAEAAYAAAAOAAQAAAAEAAYAAAAOAAUAAAAEAAYAAAAOAAYAAAAEAAYAAAAOAAcAAAAEAAYAAAAOAAgAAAAEAAYAAAAOAAkAAAAEAAYAAAAOAAoAAAAEAAYAAAAOAAsAAAAEAAYAAAAOAAwAAAAEAAYAAAAOAA0AAAAEAAYAAAAOAA4AAAAEAAYAAAAOAA8AAAAEAAYAAAAOABAAAAAEAAYAAAAOABEAAAAEAAYAAAAPAAAAAAAEAAYAAAAPAAEAAAAEAAYAAAAPAAIAAAAEAAYAAAAPAAMAAAAEAAYAAAAPAAQAAAAEAAYAAAAPAAUAAAAEAAYAAAAPAAYAAAAEAAYAAAAPAAcAAAAEAAYAAAAPAAgAAAAEAAYAAAAPAAkAAAAEAAYAAAAPAAoAAAAEAAYAAAAPAAsAAAAEAAYAAAAPAAwAAAAEAAYAAAAPAA0AAAAEAAYAAAAPAA4AAAAEAAYAAAAPAA8AAAAEAAYAAAAPABAAAAAEAAYAAAAPABEAAAAEAAYAAAAQAAAAAAAEAAYAAAAQAAEAAAAEAAYAAAAQAAIAAAAEAAYAAAAQAAMAAAAEAAYAAAAQAAQAAAAEAAYAAAAQAAUAAAAEAAYAAAAQAAYAAAAEAAYAAAAQAAcAAAAEAAYAAAAQAAgAAAAEAAYAAAAQAAkAAAAEAAYAAAAQAAoAAAAEAAYAAAAQAAsAAAAEAAYAAAAQAAwAAAAEAAYAAAAQAA0AAAAEAAYAAAAQAA4AAAAEAAYAAAAQAA8AAAAEAAYAAAAQABAAAAAEAAYAAAAQABEAAAAEAAYAAAAAABIAAAAEAAYAAAAAABMAAAAEAAYAAAAAABQAAAAEAAYAAAABABIAAAAEAAYAAAABABMAAAAEAAYAAAABABQAAAAEAAYAAAACABIAAAAEAAYAAAACABMAAAAEAAYAAAACABQAAAAEAAYAAAADABIAAAAEAAYAAAADABMAAAAEAAYAAAADABQAAAAEAAYAAAAEABIAAAAEAAYAAAAEABMAAAAEAAYAAAAEABQAAAAEAAYAAAAFABIAAAAEAAYAAAAFABMAAAAEAAYAAAAFABQAAAAEAAYAAAAGABIAAAAEAAYAAAAGABMAAAAEAAYAAAAGABQAAAAEAAYAAAAHABIAAAAEAAYAAAAHABMAAAAEAAYAAAAHABQAAAAEAAYAAAAIABIAAAAEAAYAAAAIABMAAAAEAAYAAAAIABQAAAAEAAYAAAAJABIAAAAEAAYAAAAJABMAAAAEAAYAAAAJABQAAAAEAAYAAAAKABIAAAAEAAYAAAAKABMAAAAEAAYAAAAKABQAAAAEAAYAAAALABIAAAAEAAYAAAALABMAAAAEAAYAAAALABQAAAAEAAYAAAAMABIAAAAEAAYAAAAMABMAAAAEAAYAAAAMABQAAAAEAAYAAAANABIAAAAEAAYAAAANABMAAAAEAAYAAAANABQAAAAEAAYAAAAOABIAAAAEAAYAAAAOABMAAAAEAAYAAAAOABQAAAAEAAYAAAAPABIAAAAEAAYAAAAPABMAAAAEAAYAAAAPABQAAAAEAAYAAAAQABIAAAAEAAYAAAAQABMAAAAEAAYAAAAQABQAAAAEAAYAAAARAAAAAAAEAAYAAAARAAEAAAAEAAYAAAARAAIAAAAEAAYAAAARAAMAAAAEAAYAAAARAAQAAAAEAAYAAAARAAUAAAAEAAYAAAARAAYAAAAEAAYAAAARAAcAAAAEAAYAAAARAAgAAAAEAAYAAAARAAkAAAAEAAYAAAARAAoAAAAEAAYAAAARAAsAAAAEAAYAAAARAAwAAAAEAAYAAAARAA0AAAAEAAYAAAARAA4AAAAEAAYAAAARAA8AAAAEAAYAAAARABAAAAAEAAYAAAARABEAAAAEAAYAAAARABIAAAAEAAYAAAARABMAAAAEAAYAAAARABQAAAAEAAYAAAASAAAAAAAEAAYAAAASAAEAAAAEAAYAAAASAAIAAAAEAAYAAAASAAMAAAAEAAYAAAASAAQAAAAEAAYAAAASAAUAAAAEAAYAAAASAAYAAAAEAAYAAAASAAcAAAAEAAYAAAASAAgAAAAEAAYAAAASAAkAAAAEAAYAAAASAAoAAAAEAAYAAAASAAsAAAAEAAYAAAASAAwAAAAEAAYAAAASAA0AAAAEAAYAAAASAA4AAAAEAAYAAAASAA8AAAAEAAYAAAASABAAAAAEAAYAAAASABEAAAAEAAYAAAASABIAAAAEAAYAAAASABMAAAAEAAYAAAASABQAAAAEAAYAAAAAABUAAAAEAAYAAAAAABYAAAAEAAYAAAABABUAAAAEAAYAAAABABYAAAAEAAYAAAACABUAAAAEAAYAAAACABYAAAAEAAYAAAADABUAAAAEAAYAAAADABYAAAAEAAYAAAAEABUAAAAEAAYAAAAEABYAAAAEAAYAAAAFABUAAAAEAAYAAAAFABYAAAAEAAYAAAAGABUAAAAEAAYAAAAGABYAAAAEAAYAAAAHABUAAAAEAAYAAAAHABYAAAAEAAYAAAAIABUAAAAEAAYAAAAIABYAAAAEAAYAAAAJABUAAAAEAAYAAAAJABYAAAAEAAYAAAAKABUAAAAEAAYAAAAKABYAAAAEAAYAAAALABUAAAAEAAYAAAALABYAAAAEAAYAAAAMABUAAAAEAAYAAAAMABYAAAAEAAYAAAANABUAAAAEAAYAAAANABYAAAAEAAYAAAAOABUAAAAEAAYAAAAOABYAAAAEAAYAAAAPABUAAAAEAAYAAAAPABYAAAAEAAYAAAAQABUAAAAEAAYAAAAQABYAAAAEAAYAAAARABUAAAAEAAYAAAARABYAAAAEAAYAAAASABUAAAAEAAYAAAASABYAAAAEAAYAAAATAAQAAAAEAAYAAAATAAUAAAAEAAYAAAATAAYAAAAEAAYAAAATAAcAAAAEAAYAAAATAAgAAAAEAAYAAAATAAkAAAAEAAYAAAATAAoAAAAEAAYAAAATAAsAAAAEAAYAAAATAAwAAAAEAAYAAAATAA0AAAAEAAYAAAATAA4AAAAEAAYAAAATAA8AAAAEAAYAAAATABAAAAAEAAYAAAATABEAAAAEAAYAAAATABIAAAAEAAYAAAATABMAAAAEAAYAAAATABQAAAAEAAYAAAATABUAAAAEAAYAAAATABYAAAAEAAYAAAAUAAQAAAAEAAYAAAAUAAUAAAAEAAYAAAAUAAYAAAAEAAYAAAAUAAcAAAAEAAYAAAAUAAgAAAAEAAYAAAAUAAkAAAAEAAYAAAAUAAoAAAAEAAYAAAAUAAsAAAAEAAYAAAAUAAwAAAAEAAYAAAAUAA0AAAAEAAYAAAAUAA4AAAAEAAYAAAAUAA8AAAAEAAYAAAAUABAAAAAEAAYAAAAUABEAAAAEAAYAAAAUABIAAAAEAAYAAAAUABMAAAAEAAYAAAAUABQAAAAEAAYAAAAUABUAAAAEAAYAAAAUABYAAAAEAAYAAAAVAAQAAAAEAAYAAAAVAAUAAAAEAAYAAAAVAAYAAAAEAAYAAAAVAAcAAAAEAAYAAAAVAAgAAAAEAAYAAAAVAAkAAAAEAAYAAAAVAAoAAAAEAAYAAAAVAAsAAAAEAAYAAAAVAAwAAAAEAAYAAAAVAA0AAAAEAAYAAAAVAA4AAAAEAAYAAAAVAA8AAAAEAAYAAAAVABAAAAAEAAYAAAAVABEAAAAEAAYAAAAVABIAAAAEAAYAAAAVABMAAAAEAAYAAAAVABQAAAAEAAYAAAAVABUAAAAEAAYAAAAVABYAAAAEAAYAAAAWAAQAAAAEAAYAAAAWAAUAAAAEAAYAAAAWAAYAAAAEAAYAAAAWAAcAAAAEAAYAAAAWAAgAAAAEAAYAAAAWAAkAAAAEAAYAAAAWAAoAAAAEAAYAAAAWAAsAAAAEAAYAAAAWAAwAAAAEAAYAAAAWAA0AAAAEAAYAAAAWAA4AAAAEAAYAAAAWAA8AAAAEAAYAAAAWABAAAAAEAAYAAAAWABEAAAAEAAYAAAAWABIAAAAEAAYAAAAWABMAAAAEAAYAAAAWABQAAAAEAAYAAAAWABUAAAAEAAYAAAAWABYAAAAEAAYAAAAXAAQAAAAEAAYAAAAXAAUAAAAEAAYAAAAXAAYAAAAEAAYAAAAXAAcAAAAEAAYAAAAXAAgAAAAEAAYAAAAXAAkAAAAEAAYAAAAXAAoAAAAEAAYAAAAXAAsAAAAEAAYAAAAXAAwAAAAEAAYAAAAXAA0AAAAEAAYAAAAXAA4AAAAEAAYAAAAXAA8AAAAEAAYAAAAXABAAAAAEAAYAAAAXABEAAAAEAAYAAAAXABIAAAAEAAYAAAAXABMAAAAEAAYAAAAXABQAAAAEAAYAAAAXABUAAAAEAAYAAAAXABYAAAAEAAYAAAAYAAQAAAAEAAYAAAAYAAUAAAAEAAYAAAAYAAYAAAAEAAYAAAAYAAcAAAAEAAYAAAAYAAgAAAAEAAYAAAAYAAkAAAAEAAYAAAAYAAoAAAAEAAYAAAAYAAsAAAAEAAYAAAAYAAwAAAAEAAYAAAAYAA0AAAAEAAYAAAAYAA4AAAAEAAYAAAAYAA8AAAAEAAYAAAAYABAAAAAEAAYAAAAYABEAAAAEAAYAAAAYABIAAAAEAAYAAAAYABMAAAAEAAYAAAAYABQAAAAEAAYAAAAYABUAAAAEAAYAAAAYABYAAAAEAAYAAAAZAAQAAAAEAAYAAAAZAAUAAAAEAAYAAAAZAAYAAAAEAAYAAAAZAAcAAAAEAAYAAAAZAAgAAAAEAAYAAAAZAAkAAAAEAAYAAAAZAAoAAAAEAAYAAAAZAAsAAAAEAAYAAAAZAAwAAAAEAAYAAAAZAA0AAAAEAAYAAAAZAA4AAAAEAAYAAAAZAA8AAAAEAAYAAAAZABAAAAAEAAYAAAAZABEAAAAEAAYAAAAZABIAAAAEAAYAAAAZABMAAAAEAAYAAAAZABQAAAAEAAYAAAAZABUAAAAEAAYAAAAZABYAAAAEAAYAAAAaAAQAAAAEAAYAAAAaAAUAAAAEAAYAAAAaAAYAAAAEAAYAAAAaAAcAAAAEAAYAAAAaAAgAAAAEAAYAAAAaAAkAAAAEAAYAAAAaAAoAAAAEAAYAAAAaAAsAAAAEAAYAAAAaAAwAAAAEAAYAAAAaAA0AAAAEAAYAAAAaAA4AAAAEAAYAAAAaAA8AAAAEAAYAAAAaABAAAAAEAAYAAAAaABEAAAAEAAYAAAAaABIAAAAEAAYAAAAaABMAAAAEAAYAAAAaABQAAAAEAAYAAAAaABUAAAAEAAYAAAAaABYAAAAEAAYAAAAbAAQAAAAEAAYAAAAbAAUAAAAEAAYAAAAbAAYAAAAEAAYAAAAbAAcAAAAEAAYAAAAbAAgAAAAEAAYAAAAbAAkAAAAEAAYAAAAbAAoAAAAEAAYAAAAbAAsAAAAEAAYAAAAbAAwAAAAEAAYAAAAbAA0AAAAEAAYAAAAbAA4AAAAEAAYAAAAbAA8AAAAEAAYAAAAbABAAAAAEAAYAAAAbABEAAAAEAAYAAAAbABIAAAAEAAYAAAAbABMAAAAEAAYAAAAbABQAAAAEAAYAAAAbABUAAAAEAAYAAAAbABYAAAAEAAYAAAAcAAQAAAAEAAYAAAAcAAUAAAAEAAYAAAAcAAYAAAAEAAYAAAAcAAcAAAAEAAYAAAAcAAgAAAAEAAYAAAAcAAkAAAAEAAYAAAAcAAoAAAAEAAYAAAAcAAsAAAAEAAYAAAAcAAwAAAAEAAYAAAAcAA0AAAAEAAYAAAAcAA4AAAAEAAYAAAAcAA8AAAAEAAYAAAAcABAAAAAEAAYAAAAcABEAAAAEAAYAAAAcABIAAAAEAAYAAAAcABMAAAAEAAYAAAAcABQAAAAEAAYAAAAcABUAAAAEAAYAAAAcABYAAAAEAAYAAAAdAAQAAAAEAAYAAAAdAAUAAAAEAAYAAAAdAAYAAAAEAAYAAAAdAAcAAAAEAAYAAAAdAAgAAAAEAAYAAAAdAAkAAAAEAAYAAAAdAAoAAAAEAAYAAAAdAAsAAAAEAAYAAAAdAAwAAAAEAAYAAAAdAA0AAAAEAAYAAAAdAA4AAAAEAAYAAAAdAA8AAAAEAAYAAAAdABAAAAAEAAYAAAAdABEAAAAEAAYAAAAdABIAAAAEAAYAAAAdABMAAAAEAAYAAAAdABQAAAAEAAYAAAAdABUAAAAEAAYAAAAdABYAAAAEAAYAAAAeAAQAAAAEAAYAAAAeAAUAAAAEAAYAAAAeAAYAAAAEAAYAAAAeAAcAAAAEAAYAAAAeAAgAAAAEAAYAAAAeAAkAAAAEAAYAAAAeAAoAAAAEAAYAAAAeAAsAAAAEAAYAAAAeAAwAAAAEAAYAAAAeAA0AAAAEAAYAAAAeAA4AAAAEAAYAAAAeAA8AAAAEAAYAAAAeABAAAAAEAAYAAAAeABEAAAAEAAYAAAAeABIAAAAEAAYAAAAeABMAAAAEAAYAAAAeABQAAAAEAAYAAAAeABUAAAAEAAYAAAAeABYAAAAEAAYAAAAfAAQAAAAEAAYAAAAfAAUAAAAEAAYAAAAfAAYAAAAEAAYAAAAfAAcAAAAEAAYAAAAfAAgAAAAEAAYAAAAfAAkAAAAEAAYAAAAfAAoAAAAEAAYAAAAfAAsAAAAEAAYAAAAfAAwAAAAEAAYAAAAfAA0AAAAEAAYAAAAfAA4AAAAEAAYAAAAfAA8AAAAEAAYAAAAfABAAAAAEAAYAAAAfABEAAAAEAAYAAAAfABIAAAAEAAYAAAAfABMAAAAEAAYAAAAfABQAAAAEAAYAAAAfABUAAAAEAAYAAAAfABYAAAAEAAYAAAAgAAQAAAAEAAYAAAAgAAUAAAAEAAYAAAAgAAYAAAAEAAYAAAAgAAcAAAAEAAYAAAAgAAgAAAAEAAYAAAAgAAkAAAAEAAYAAAAgAAoAAAAEAAYAAAAgAAsAAAAEAAYAAAAgAAwAAAAEAAYAAAAgAA0AAAAEAAYAAAAgAA4AAAAEAAYAAAAgAA8AAAAEAAYAAAAgABAAAAAEAAYAAAAgABEAAAAEAAYAAAAgABIAAAAEAAYAAAAgABMAAAAEAAYAAAAgABQAAAAEAAYAAAAgABUAAAAEAAYAAAAgABYAAAAEAAYAAAAhAAQAAAAEAAYAAAAhAAUAAAAEAAYAAAAhAAYAAAAEAAYAAAAhAAcAAAAEAAYAAAAhAAgAAAAEAAYAAAAhAAkAAAAEAAYAAAAhAAoAAAAEAAYAAAAhAAsAAAAEAAYAAAAhAAwAAAAEAAYAAAAhAA0AAAAEAAYAAAAhAA4AAAAEAAYAAAAhAA8AAAAEAAYAAAAhABAAAAAEAAYAAAAhABEAAAAEAAYAAAAhABIAAAAEAAYAAAAhABMAAAAEAAYAAAAhABQAAAAEAAYAAAAhABUAAAAEAAYAAAAhABYAAAAEAAYAAAAiAAQAAAAEAAYAAAAiAAUAAAAEAAYAAAAiAAYAAAAEAAYAAAAiAAcAAAAEAAYAAAAiAAgAAAAEAAYAAAAiAAkAAAAEAAYAAAAiAAoAAAAEAAYAAAAiAAsAAAAEAAYAAAAiAAwAAAAEAAYAAAAiAA0AAAAEAAYAAAAiAA4AAAAEAAYAAAAiAA8AAAAEAAYAAAAiABAAAAAEAAYAAAAiABEAAAAEAAYAAAAiABIAAAAEAAYAAAAiABMAAAAEAAYAAAAiABQAAAAEAAYAAAAiABUAAAAEAAYAAAAiABYAAAAEAAYAAAAjAAQAAAAEAAYAAAAjAAUAAAAEAAYAAAAjAAYAAAAEAAYAAAAjAAcAAAAEAAYAAAAjAAgAAAAEAAYAAAAjAAkAAAAEAAYAAAAjAAoAAAAEAAYAAAAjAAsAAAAEAAYAAAAjAAwAAAAEAAYAAAAjAA0AAAAEAAYAAAAjAA4AAAAEAAYAAAAjAA8AAAAEAAYAAAAjABAAAAAEAAYAAAAjABEAAAAEAAYAAAAjABIAAAAEAAYAAAAjABMAAAAEAAYAAAAjABQAAAAEAAYAAAAjABUAAAAEAAYAAAAjABYAAAAEAAYAAAAkAAQAAAAEAAYAAAAkAAUAAAAEAAYAAAAkAAYAAAAEAAYAAAAkAAcAAAAEAAYAAAAkAAgAAAAEAAYAAAAkAAkAAAAEAAYAAAAkAAoAAAAEAAYAAAAkAAsAAAAEAAYAAAAkAAwAAAAEAAYAAAAkAA0AAAAEAAYAAAAkAA4AAAAEAAYAAAAkAA8AAAAEAAYAAAAkABAAAAAEAAYAAAAkABEAAAAEAAYAAAAkABIAAAAEAAYAAAAkABMAAAAEAAYAAAAkABQAAAAEAAYAAAAkABUAAAAEAAYAAAAkABYAAAAEAAYAAAAlAAQAAAAEAAYAAAAlAAUAAAAEAAYAAAAlAAYAAAAEAAYAAAAlAAcAAAAEAAYAAAAlAAgAAAAEAAYAAAAlAAkAAAAEAAYAAAAlAAoAAAAEAAYAAAAlAAsAAAAEAAYAAAAlAAwAAAAEAAYAAAAlAA0AAAAEAAYAAAAlAA4AAAAEAAYAAAAlAA8AAAAEAAYAAAAlABAAAAAEAAYAAAAlABEAAAAEAAYAAAAlABIAAAAEAAYAAAAlABMAAAAEAAYAAAAlABQAAAAEAAYAAAAlABUAAAAEAAYAAAAlABYAAAAEAAYAAAAmAAQAAAAEAAYAAAAmAAUAAAAEAAYAAAAmAAYAAAAEAAYAAAAmAAcAAAAEAAYAAAAmAAgAAAAEAAYAAAAmAAkAAAAEAAYAAAAmAAoAAAAEAAYAAAAmAAsAAAAEAAYAAAAmAAwAAAAEAAYAAAAmAA0AAAAEAAYAAAAmAA4AAAAEAAYAAAAmAA8AAAAEAAYAAAAmABAAAAAEAAYAAAAmABEAAAAEAAYAAAAmABIAAAAEAAYAAAAmABMAAAAEAAYAAAAmABQAAAAEAAYAAAAmABUAAAAEAAYAAAAmABYAAAAEAAYAAAAnAAQAAAAEAAYAAAAnAAUAAAAEAAYAAAAnAAYAAAAEAAYAAAAnAAcAAAAEAAYAAAAnAAgAAAAEAAYAAAAnAAkAAAAEAAYAAAAnAAoAAAAEAAYAAAAnAAsAAAAEAAYAAAAnAAwAAAAEAAYAAAAnAA0AAAAEAAYAAAAnAA4AAAAEAAYAAAAnAA8AAAAEAAYAAAAnABAAAAAEAAYAAAAnABEAAAAEAAYAAAAnABIAAAAEAAYAAAAnABMAAAAEAAYAAAAnABQAAAAEAAYAAAAnABUAAAAEAAYAAAAnABYAAAAEAAYAAAAmAAMAAAAEAAYAAAAnAAMAAAAEAAYAAAAnAAIAAAAEAAYAAAATAAAAAAAEAAYAAAATAAEAAAAEAAYAAAATAAIAAAAEAAYAAAATAAMAAAAEAAYAAAAUAAAAAAAEAAYAAAAUAAEAAAAEAAYAAAAUAAIAAAAEAAYAAAAUAAMAAAAEAAYAAAAVAAAAAAAEAAYAAAAVAAEAAAAEAAYAAAAVAAIAAAAEAAYAAAAVAAMAAAAEAAYAAAAWAAAAAAAEAAYAAAAWAAEAAAAEAAYAAAAWAAIAAAAEAAYAAAAWAAMAAAAEAAYAAAAXAAAAAAAEAAYAAAAXAAEAAAAEAAYAAAAXAAIAAAAEAAYAAAAXAAMAAAAEAAYAAAAYAAAAAAAEAAYAAAAYAAEAAAAEAAYAAAAYAAIAAAAEAAYAAAAYAAMAAAAEAAYAAAAZAAAAAAAEAAYAAAAZAAEAAAAEAAYAAAAZAAIAAAAEAAYAAAAZAAMAAAAEAAYAAAAaAAAAAAAEAAYAAAAaAAEAAAAEAAYAAAAaAAIAAAAEAAYAAAAaAAMAAAAEAAYAAAAbAAAAAAAEAAYAAAAbAAEAAAAEAAYAAAAbAAIAAAAEAAYAAAAbAAMAAAAEAAYAAAAcAAAAAAAEAAYAAAAcAAEAAAAEAAYAAAAcAAIAAAAEAAYAAAAcAAMAAAAEAAYAAAAdAAAAAAAEAAYAAAAdAAEAAAAEAAYAAAAdAAIAAAAEAAYAAAAdAAMAAAAEAAYAAAAeAAAAAAAEAAYAAAAeAAEAAAAEAAYAAAAeAAIAAAAEAAYAAAAeAAMAAAAEAAYAAAAfAAAAAAAEAAYAAAAfAAEAAAAEAAYAAAAfAAIAAAAEAAYAAAAfAAMAAAAEAAYAAAAgAAAAAAAEAAYAAAAgAAEAAAAEAAYAAAAgAAIAAAAEAAYAAAAgAAMAAAAEAAYAAAAhAAAAAAAEAAYAAAAhAAEAAAAEAAYAAAAhAAIAAAAEAAYAAAAhAAMAAAAEAAYAAAAiAAAAAAAEAAYAAAAiAAEAAAAEAAYAAAAiAAIAAAAEAAYAAAAiAAMAAAAEAAYAAAAjAAAAAAAEAAYAAAAjAAEAAAAEAAYAAAAjAAIAAAAEAAYAAAAjAAMAAAAEAAYAAAAkAAAAAAAEAAYAAAAkAAEAAAAEAAYAAAAkAAIAAAAEAAYAAAAkAAMAAAAEAAYAAAAlAAAAAAAEAAYAAAAlAAEAAAAEAAYAAAAlAAIAAAAEAAYAAAAlAAMAAAAEAAYAAAAmAAAAAAAEAAYAAAAmAAEAAAAEAAYAAAAmAAIAAAAEAAYAAAAnAAAAAAAEAAYAAAAnAAEAAAAEAAYAAAA=")
tile_set = ExtResource("2_wmrb2")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 360)

[node name="Vine" type="TileMapLayer" parent="Parallax2D"]
tile_map_data = PackedByteArray("AAAUAAAAAAACAAQAAAAUAAEAAAACAAQAAAAUAAIAAAABAAQAAAAUAAMAAAAAAAQAAAAUAAQAAAAAAAQAAAAUAAUAAAAEAAQAAAAUAAYAAAAEAAQAAAAUAAcAAAAEAAQAAAAUAAgAAAACAAQAAAAUAAkAAAACAAQAAAAUAAoAAAAAAAQAAAAUAAsAAAAAAAQAAAAUAAwAAAAAAAQAAAAUAA0AAAAAAAQAAAAUAA4AAAAEAAQAAAAUAA8AAAAEAAQAAAAUABAAAAAEAAQAAAAUABEAAAAEAAQAAAAUABIAAAAEAAQAAAAUABMAAAACAAQAAAAUABQAAAACAAQAAAAUABUAAAACAAQAAAAUABYAAAADAAQAAAATAAAAAAAAAAQAAAATAAEAAAAAAAQAAAATAAIAAAAEAAQAAAATAAMAAAAEAAQAAAATAAQAAAAEAAQAAAATAAUAAAACAAQAAAATAAYAAAACAAQAAAATAAcAAAACAAQAAAATAAgAAAAAAAQAAAATAAkAAAAAAAQAAAATAAoAAAAEAAQAAAATAAsAAAAEAAQAAAATAAwAAAAEAAQAAAATAA0AAAAEAAQAAAATAA4AAAADAAQAAAATAA8AAAADAAQAAAATABAAAAADAAQAAAATABEAAAADAAQAAAATABIAAAACAAQAAAATABMAAAAAAAQAAAATABQAAAAAAAQAAAATABUAAAAAAAQAAAATABYAAAAAAAQAAAAVAAAAAAAEAAQAAAAVAAEAAAAEAAQAAAAVAAIAAAACAAQAAAAVAAMAAAACAAQAAAAVAAQAAAACAAQAAAAVAAUAAAAAAAQAAAAVAAYAAAAAAAQAAAAVAAcAAAAAAAQAAAAVAAgAAAAEAAQAAAAVAAkAAAAEAAQAAAAVAAoAAAACAAQAAAAVAAsAAAACAAQAAAAVAAwAAAACAAQAAAAVAA0AAAACAAQAAAAVAA4AAAAAAAQAAAAVAA8AAAAAAAQAAAAVABAAAAAAAAQAAAAVABEAAAAAAAQAAAAVABIAAAAAAAQAAAAVABMAAAAEAAQAAAAVABQAAAAEAAQAAAAVABUAAAAEAAQAAAAVABYAAAAEAAQAAAASABIAAAAAAAQAAAASABEAAAAAAAQAAAASAAgAAAAAAAQAAAASAAcAAAAAAAQAAAASABMAAAAAAAQAAAAWAA4AAAACAAQAAAAWAA0AAAACAAQAAAAWAAUAAAACAAQAAAAWAAQAAAACAAQAAAA=")
tile_set = ExtResource("2_wmrb2")

[node name="Ground" type="TileMapLayer" parent="."]
z_index = 1
tile_map_data = PackedByteArray("AAAJABQAAAAJAAUAAAAKABQAAAAJAAUAAAALABQAAAAJAAUAAAAAABUAAAAJAAUAAAAAABYAAAAIAAQAAAABABUAAAAJAAUAAAABABYAAAAIAAQAAAACABUAAAAJAAUAAAACABYAAAAIAAQAAAADABUAAAAJAAUAAAADABYAAAAIAAQAAAAEABUAAAAJAAUAAAAEABYAAAAIAAQAAAAFABUAAAAJAAUAAAAFABYAAAAIAAQAAAAGABUAAAAJAAUAAAAGABYAAAAIAAQAAAAHABUAAAAJAAUAAAAHABYAAAAIAAQAAAAIABUAAAAJAAUAAAAIABYAAAAIAAQAAAAJABUAAAAJAAUAAAAJABYAAAAIAAQAAAAKABUAAAAJAAUAAAAKABYAAAAIAAQAAAALABUAAAAJAAUAAAALABYAAAAIAAQAAAAMABUAAAAJAAUAAAAMABYAAAAIAAQAAAANABUAAAAJAAUAAAANABYAAAAIAAQAAAAOABUAAAAJAAUAAAAOABYAAAAIAAQAAAAPABUAAAAJAAUAAAAPABYAAAAIAAQAAAAQABUAAAAJAAUAAAAQABYAAAAIAAQAAAARABUAAAAJAAUAAAARABYAAAAIAAQAAAASABUAAAAJAAUAAAASABYAAAAIAAQAAAATABUAAAAJAAUAAAATABYAAAAIAAQAAAAUABUAAAAJAAUAAAAUABYAAAAIAAQAAAAVABUAAAAJAAUAAAAVABYAAAAIAAQAAAAWABUAAAAJAAUAAAAWABYAAAAIAAQAAAAXABUAAAAJAAUAAAAXABYAAAAIAAQAAAAYABUAAAAJAAUAAAAYABYAAAAIAAQAAAAZABUAAAAJAAUAAAAZABYAAAAIAAQAAAAaABUAAAAJAAUAAAAaABYAAAAIAAQAAAAbABUAAAAJAAUAAAAbABYAAAAIAAQAAAAcABYAAAAIAAQAAAAdABUAAAAJAAUAAAAdABYAAAAIAAQAAAAeABQAAAAJAAUAAAAeABUAAAAJAAUAAAAeABYAAAAIAAQAAAAfABQAAAAJAAUAAAAfABUAAAAJAAUAAAAfABYAAAAIAAQAAAAgABQAAAAJAAUAAAAgABUAAAAJAAUAAAAgABYAAAAIAAQAAAAhABQAAAAJAAUAAAAhABUAAAAJAAUAAAAhABYAAAAIAAQAAAAiABUAAAAJAAUAAAAiABYAAAAIAAQAAAAjABUAAAAJAAUAAAAjABYAAAAIAAQAAAAkABUAAAAJAAUAAAAkABYAAAAIAAQAAAAlABUAAAAJAAUAAAAlABYAAAAIAAQAAAAmABUAAAAJAAUAAAAmABYAAAAIAAQAAAAnABUAAAAJAAUAAAAnABYAAAAIAAQAAAAMABQAAAAJAAUAAAANABQAAAAJAAUAAAAOABQAAAAJAAUAAAAPABQAAAAJAAUAAAAQABQAAAAJAAUAAAARABQAAAAJAAUAAAASABQAAAAJAAUAAAATABQAAAAJAAUAAAAUABQAAAAJAAUAAAAVABQAAAAJAAUAAAAWABQAAAAJAAUAAAAXABQAAAAJAAUAAAAYABQAAAAJAAUAAAAZABQAAAAJAAUAAAAaABQAAAAJAAUAAAAbABQAAAAJAAUAAAAcABQAAAAJAAUAAAAdABQAAAAJAAUAAAAcABUAAAAJAAUAAAA=")
tile_set = ExtResource("2_wmrb2")

[node name="Leaves" type="TileMapLayer" parent="."]
position = Vector2(0, 1)
tile_set = SubResource("TileSet_i4we8")

[node name="Level Shroomie" parent="." instance=ExtResource("4_h5jla")]
top_level = true
position = Vector2(228, 320)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Level HUD" type="Control" parent="CanvasLayer"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ll8sa")
metadata/_edit_use_anchors_ = true

[node name="Time" type="RichTextLabel" parent="CanvasLayer/Level HUD"]
layout_mode = 1
offset_left = 233.0
offset_top = 1.0
offset_right = 427.0
offset_bottom = 64.0
theme = ExtResource("6_f6opx")
text = "30.00s"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="RichTextLabel" parent="CanvasLayer/Level HUD"]
layout_mode = 0
offset_left = 24.0
offset_top = 9.0
offset_right = 146.0
offset_bottom = 367.0
theme = ExtResource("6_f6opx")
theme_override_font_sizes/normal_font_size = 9
text = "Score: 0.00m"
horizontal_alignment = 1

[node name="HighScore" type="RichTextLabel" parent="CanvasLayer/Level HUD"]
layout_mode = 0
offset_left = 512.0
offset_top = 9.0
offset_right = 630.0
offset_bottom = 358.0
theme = ExtResource("6_f6opx")
theme_override_font_sizes/normal_font_size = 9
text = "High Score
0.00m"
horizontal_alignment = 1

[node name="PostRunMessage" type="RichTextLabel" parent="CanvasLayer/Level HUD"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 63.0
offset_right = 645.0
offset_bottom = 173.0
theme = ExtResource("6_f6opx")
text = "Congratulations!
Plant is healed"
horizontal_alignment = 1

[node name="EnergyGained" type="RichTextLabel" parent="CanvasLayer/Level HUD"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 200.0
offset_right = 649.0
offset_bottom = 309.0
theme = ExtResource("6_f6opx")
text = "Energy Gained:
0"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 30.0
one_shot = true
autostart = true
